# Mytransfer

./: .gitignore  LICENSE  Mytransfer.cabal  README.md  deployscript  filedb.sqlite  homepage.html  stack.yaml  uploadframe.html
app/: Main.hs
devops/: autoscalerAndDatabaseFromUbuntuImage  fileserverFromUbuntuImage  poc_autoscaler.py  runMytransfer  setupLoadBalancer
src/: Autoscaling.hs  Bib.hs  DatabaseCalls.hs  ImageProvider.hs  Mailer.hs  MainApp.hs  StorageBackend.hs  Types.hs  Utilities.hs
static/: homepage.html  mytransfer.js
test/: Spec.hs
