name:                Mytransfer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Mytransfer#readme
license:             BSD3
license-file:        LICENSE
author:              Wander Hillen
maintainer:          wjw.hillen@gmail.com
copyright:           2017 Wander Hillen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ImageProvider
                     , StorageBackend
                     , Mailer
                     , Secrets
                     , Types
                     , Utilities
                     , Autoscaling
                     , DatabaseCalls
                     , MainApp
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai-extra
                     , directory
                     , uuid
                     , random
                     , bytestring
                     , text
                     , hailgun
                     , time
                     , process
                     , wai
                     , conduit
                     , conduit-combinators
                     , resource-pool
                     , postgresql-simple
  default-language:    Haskell2010

executable Mytransfer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Mytransfer
                     , scotty
                     , wai-extra
                     , text
                     , http-types
                     , network
                     , warp
                     , wai-middleware-static
                     , bytestring
  default-language:    Haskell2010

test-suite Mytransfer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Mytransfer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Mytransfer
